# STM32Fxx_Magic8Ball

./: Cargo.toml  memory.x  readme.md
src/: magicball.rs  main.rs
